--- a/assets/style.css
+++ b/assets/style.css
@@ -139,17 +139,20 @@ footer {
   color: #000;
 }
 
+/* ========== CORRECCIÓN AQUÍ ========== */
 .card-front {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 }
 
 .card-front img.producto-img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
+  height: auto;
+  max-height: 300px;
+  object-fit: contain;
+  border-radius: 1px;
 }
 
 .card-back {
@@ -221,11 +224,11 @@ th {
   }
 
   .card {
-    height: 430px;
+    height: auto;
   }
 
   .card-inner {
-    height: 100%;
+    height: auto;
   }
 
   .card-front, .card-back {
@@ -267,7 +270,7 @@ th {
 }
 
 .nav-item > button {
-  all: unset; /* Elimina cualquier estilo heredado */
+  all: unset;
   color: white;
   font-weight: bold;
   font-size: 1rem;
@@ -349,7 +352,6 @@ th {
   box-sizing: border-box;
   color: #000;
 }
-
 
 textarea {
   resize: vertical;
@@ -435,5 +437,3 @@ textarea {
   margin: auto;
   color: #000;
 }
-
-
