--- a/assets/style.css
+++ b/assets/style.css
@@ -188,7 +188,7 @@ button:hover,
   min-width: 160px;
 }
 
-#filtros-container button {
+#filtros-container > button {
   background-color: #000;
   color: white;
   font-size: 0.95rem;
@@ -198,7 +198,7 @@ button:hover,
   cursor: pointer;
 }
 
-#filtros-container button:hover {
+#filtros-container > button:hover {
   background-color: #333;
 }
 
